# GP-cubed

./: README.md
hacking-non-stationary-GPs/: 0_naive_stationary_GP.ipynb  1_warped_input_GP.ipynb  2_segmented_GP.ipynb  3_basis_GP.ipynb  README.md  datagen.ipynb  pyproject.toml  utils.py
hacking-non-stationary-GPs/data/: observed_data_A.csv  observed_data_B.csv  observed_data_C.csv  observed_data_D.csv  observed_data_E.csv  true_data_A.csv  true_data_B.csv  true_data_C.csv  true_data_D.csv  true_data_E.csv
