[tool.poetry]
name = "hacking-non-stationary-gps"
version = "0.1.0"
description = "Approaches to non-stationary Gaussian processes in GPyTorch"
authors = ["William Davis <williamjsdavis@berkeley.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gpytorch = "^1.14"
torch = "^2.6.0"
pandas = "^2.2.3"
plotly = "^6.0.1"
ipykernel = "^6.29.5"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
